--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "firebase": "^11.7.0",
     "geist": "^1.3.0",
     "genkit": "^1.8.0",
+    "gray-matter": "^4.0.3",
+    "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
@@ -51,12 +53,12 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^9.0.1",
     "recharts": "^2.15.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
